# sysinfo-rs

./: Cargo.toml  README.md
schemas/: groups.md  processes.md  sysinfo.md  users.md
src/: main.rs
