[package]
name = "sysinfo-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
local-ip-address = "0.5.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
clap = { version = "4.4.16", features = ["derive"] }
argh = "0.1.12"
itertools = "0.12.0"
